# viz

./: .bumpversion.cfg  .gitignore  .pyproject.toml  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.rst  bumpversion.cfg  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: Tests.yml  build_doc.yml  deploy_pypi.yml  tests.yml
dev/: about_tensors.html  api.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  temp_empty.txt  tensorly_backends.html
dev/_modules/: index.html
dev/_sources/: contributing.rst.txt  index.rst.txt
dev/api/: data.html  factor_tools.html  model_evaluation.html  multimodel_evaluation.html  outliers.html  postprocessing-1.py  postprocessing.html  visualisation-1.py  visualisation-12.py  visualisation-13.py  visualisation-15.py  visualisation-16.py  visualisation-19.py  visualisation-2.py  visualisation-3.py  visualisation-4.py  visualisation-7.py  visualisation-8.py  visualisation-9.py  visualisation.html
dev/auto_examples/: index.html  plot_bike_plotly.html  plot_core_consistency.html  plot_labelled_decompositions.html  plot_optimisation_diagnostic.html  plot_outlier_detection.html  plot_selecting_aminoacids_components.html  plot_split_half_analysis.html  plot_working_with_xarray.html  sg_execution_times.html
docs/: Makefile  about_tensors.rst  api.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  notation.rst  refs.bib  tensorly_backends.rst  usage.rst
docs/api/: data.rst  factor_tools.rst  model_evaluation.rst  multimodel_evaluation.rst  outliers.rst  postprocessing.rst  visualisation.rst
examples/: README.rst  plot_benchmark.py  plot_bike_plotly.py  plot_core_consistency.py  plot_labelled_decompositions.py  plot_optimisation_diagnostic.py  plot_outlier_detection.py  plot_selecting_aminoacids_components.py  plot_split_half_analysis.py  plot_working_with_xarray.py
paper/: paper.bib  paper.md
src/component_vis/: __init__.py  _module_utils.py  _tl_utils.py  _utils.py  _xarray_wrapper.py  conftest.py  data.py  factor_tools.py  model_evaluation.py  multimodel_evaluation.py  outliers.py  postprocessing.py  utils.py  visualisation.py  xarray_wrapper.py
src/component_viz/: __init__.py  _utils.py  factor_tools.py  model_evaluation.py  multimodel_evaluation.py  outliers.py  postprocessing.py  visualisation.py  xarray_wrapper.py
src/tlvis/: _module_utils.py  _xarray_wrapper.py  (+6 more)
stable/: about_tensors.html  api.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  tensorly_backends.html
tests/: __init__.py  conftest.py  test_data.py  test_factor_tools.py  test_model_evaluation.py  test_module_utils.py  test_multimodel_evaluation.py  test_outliers.py  test_postprocessing.py  test_tl_utils.py  test_utils.py  test_visualisation.py  test_xarray_wrapper.py
tlvis/: multimodel_evaluation.py  utils.py
tlviz/: __init__.py  _tl_utils.py  _xarray_wrapper.py  conftest.py  data.py  factor_tools.py  model_evaluation.py  multimodel_evaluation.py  outliers.py  postprocessing.py  utils.py  visualisation.py
(+92 files in other folders)
