

[metadata]
name = component_viz
keywords=component_viz
version = 0.0.1
license = "MIT license",
description = Package to visualise component-based decomposition models such as PCA and CP
long_description = file: README.rst
author = Marie Roald
author_email = roald.marie@gmail.com
url=https://github.com/marieroald/component_viz
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 120


