[metadata]
name = component_vis
keywords = component_vis
version = 0.0.1
license = "MIT license",
description = Package to visualise component-based decomposition models such as PCA and PARAFAC
long_description = file: README.rst
author = Marie Roald & Yngve Mardal Moe
author_email = roald.marie@gmail.com
url=https://github.com/marieroald/component-vis
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    xarray
    plotly>=4.12
extras_require = 
    docs =
        sphinx
        sphinx-gallery
        sphinxcontrib-bibtex
        numpydoc
        sphinx-rtd-theme


[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120
