[metadata]
name = TLVis
version = 0.0.3
license = "MIT license",
description = Package to visualise component-based decomposition models such as PCA and PARAFAC
long_description = file: README.rst
author = Marie Roald & Yngve Mardal Moe
author_email = roald.marie@gmail.com
url=https://github.com/marieroald/tlvis
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = tlvis
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    pandas>=1.1.0
    statsmodels
    xarray
    requests

[options.extras_require]
docs =
    sphinx
    sphinx-gallery
    sphinxcontrib-bibtex
    numpydoc
    tensorly
    tensorly-sphinx-theme
    plotly>=4.12
    torch

test =
    pytest
    pytest-randomly
    pytest-cov
    coverage
    tensorly
    plotly>=4.12
    torch

devel =
    flake8
    isort
    black
    bump2version

all =
    pingouin

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120
ignore = E203, W503
per-file-ignores = __init__.py:F401